Refactor HTML structure and styles for dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,152 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>IoT Logger Control</title>
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #0f172a;
-      color: #e5e7eb;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 40px;
-    }
-    h1 { margin-bottom: 10px; }
-    .card {
-      background: #111827;
-      border-radius: 14px;
-      padding: 24px 28px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-      max-width: 480px;
-      width: 100%;
-    }
-    button {
-      border: none;
-      border-radius: 999px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    #startBtn { background: #22c55e; color: #022c22; }
-    #stopBtn { background: #ef4444; color: #fef2f2; }
-    #stopBtn:disabled, #startBtn:disabled {
-      opacity: 0.5; cursor: not-allowed;
-    }
-    .status {
-      margin-top: 16px;
-      font-size: 14px;
-      color: #9ca3af;
-    }
-    .badge {
-      display: inline-block;
-      padding: 2px 8px;
-      border-radius: 999px;
-      font-size: 12px;
-      margin-left: 8px;
-    }
-    .badge.running { background: #022c22; color: #4ade80; }
-    .badge.idle { background: #3f3f46; color: #e4e4e7; }
-    a.download-link {
-      color: #38bdf8;
-      text-decoration: none;
-    }
-  </style>
+<meta charset="UTF-8" />
+<title>IoT Logger Control</title>
+<style>
+body {
+  background:#0f172a; color:#e2e8f0;
+  font-family:-apple-system,system-ui,sans-serif;
+  padding:40px; text-align:center;
+}
+button {
+  border:none; border-radius:12px; padding:12px 22px;
+  font-size:16px; cursor:pointer; margin:10px;
+}
+#start {background:#22c55e;color:#052e16;}
+#stop  {background:#ef4444;color:#fee2e2;}
+#stop:disabled {opacity:.4;cursor:not-allowed;}
+.card {
+  background:#111827; padding:30px; border-radius:16px;
+  display:inline-block; box-shadow:0 10px 30px rgba(0,0,0,.4);
+}
+.badge {
+  padding:4px 8px; border-radius:8px; font-size:12px;
+}
+.running {background:#064e3b;color:#6ee7b7;}
+.idle {background:#374151;color:#d1d5db;}
+</style>
 </head>
 <body>
-  <h1>IoT Logger</h1>
-  <div class="card">
-    <p>Control logging for all connected Arduino sensors. When you click <b>Start</b>, the server records the exact UTC time and devices will use it as their experiment start time.</p>
 
-    <div style="margin-top: 16px;">
-      <button id="startBtn">Start Logging</button>
-      <button id="stopBtn" disabled>Stop & Download ZIP</button>
-    </div>
+<h1>IoT Logger</h1>
+<div class="card">
+  <p>Start or stop synchronized multi-sensor logging.</p>
+  <button id="start">Start Logging</button>
+  <button id="stop" disabled>Stop & Download ZIP</button>
 
-    <div class="status">
-      Status:
-      <span id="statusLabel">Idle</span>
-      <span id="statusBadge" class="badge idle">IDLE</span>
-      <div id="sessionInfo"></div>
-      <div id="message"></div>
-    </div>
-  </div>
+  <p>Status:
+    <span id="statusLabel">Idle</span>
+    <span id="statusBadge" class="badge idle">IDLE</span>
+  </p>
 
-  <script>
-    const startBtn = document.getElementById("startBtn");
-    const stopBtn = document.getElementById("stopBtn");
-    const statusLabel = document.getElementById("statusLabel");
-    const statusBadge = document.getElementById("statusBadge");
-    const sessionInfo = document.getElementById("sessionInfo");
-    const message = document.getElementById("message");
+  <div id="session"></div>
+  <div id="msg" style="margin-top:10px;color:#93c5fd;"></div>
+</div>
 
-    function setRunning(sessionId, startEpoch, startTimeUtc) {
-      statusLabel.textContent = "Logging...";
-      statusBadge.textContent = "RUNNING";
-      statusBadge.classList.remove("idle");
-      statusBadge.classList.add("running");
-      startBtn.disabled = true;
-      stopBtn.disabled = false;
-      sessionInfo.innerHTML = `
-        Session: <b>${sessionId}</b><br>
-        start_epoch: <code>${startEpoch}</code><br>
-        start_time_utc: <code>${startTimeUtc}</code>
-      `;
-      message.textContent = "";
-    }
+<script>
+const bStart=document.getElementById("start");
+const bStop=document.getElementById("stop");
+const status=document.getElementById("statusLabel");
+const badge=document.getElementById("statusBadge");
+const msg=document.getElementById("msg");
+const sessionBox=document.getElementById("session");
 
-    function setIdle() {
-      statusLabel.textContent = "Idle";
-      statusBadge.textContent = "IDLE";
-      statusBadge.classList.remove("running");
-      statusBadge.classList.add("idle");
-      startBtn.disabled = false;
-      stopBtn.disabled = true;
-      sessionInfo.innerHTML = "";
-    }
+function setRunning(id,epoch,time){
+  status.textContent="Running";
+  badge.textContent="RUNNING";
+  badge.classList.remove("idle"); badge.classList.add("running");
+  bStart.disabled=true; bStop.disabled=false;
+  sessionBox.innerHTML=`Session: <b>${id}</b><br>start_epoch: <code>${epoch}</code>`;
+}
 
-    startBtn.addEventListener("click", async () => {
-      message.textContent = "Starting...";
-      try {
-        const res = await fetch("/api/start", { method: "POST" });
-        const data = await res.json();
-        if (data.status === "started" || data.status === "already_running") {
-          setRunning(data.session_id, data.start_epoch, data.start_time_utc || "");
-        } else {
-          message.textContent = "Unexpected response from server.";
-        }
-      } catch (e) {
-        console.error(e);
-        message.textContent = "Failed to start logging.";
-      }
-    });
+function setIdle(){
+  status.textContent="Idle";
+  badge.textContent="IDLE";
+  badge.classList.add("idle"); badge.classList.remove("running");
+  bStart.disabled=false; bStop.disabled=true;
+  sessionBox.innerHTML="";
+}
 
-    stopBtn.addEventListener("click", async () => {
-      message.textContent = "Stopping and preparing ZIP...";
-      try {
-        const res = await fetch("/api/stop", { method: "POST" });
-        if (!res.ok) {
-          message.textContent = "Failed to stop / download ZIP.";
-          return;
-        }
-        const blob = await res.blob();
-        const url = window.URL.createObjectURL(blob);
-        const a = document.createElement("a");
-        a.href = url;
-        a.download = "session_logs.zip";
-        document.body.appendChild(a);
-        a.click();
-        a.remove();
-        window.URL.revokeObjectURL(url);
-        setIdle();
-        message.textContent = "ZIP downloaded.";
-      } catch (e) {
-        console.error(e);
-        message.textContent = "Error while stopping.";
-      }
-    });
-  </script>
+bStart.onclick=async()=>{
+  msg.textContent="Starting...";
+  let r=await fetch("/api/start",{method:"POST"});
+  let j=await r.json();
+  if(j.start_epoch){
+    setRunning(j.session_id,j.start_epoch,j.start_time_utc);
+    msg.textContent="Logging started.";
+  }
+};
+
+bStop.onclick=async()=>{
+  msg.textContent="Stopping...";
+  let r=await fetch("/api/stop",{method:"POST"});
+  let blob=await r.blob();
+
+  let a=document.createElement("a");
+  a.href=URL.createObjectURL(blob);
+  a.download="session.zip";
+  a.click();
+  URL.revokeObjectURL(a.href);
+
+  setIdle();
+  msg.textContent="ZIP downloaded.";
+};
+</script>
 </body>
 </html>
